--- a/src/app/style/body.scss
+++ b/src/app/style/body.scss
@@ -1,6 +1,17 @@
 .container{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    padding-top: 20px;
 }
 .containerBody{
-    width: 40%;
+    width: 50%;
+
+}
+
+.imagen{
+    width: 400px;
+    height: 350px;
+
 }
